--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ PyQt6>=6.10.0
 PyMuPDF>=1.26.0
 
 # Build dependencies (optional)
-pyinstaller>=6.0.0
+py2app>=0.28.0
 Pillow>=10.0.0  # For icon generation
