--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Core dependencies
 PyQt6>=6.10.0
 PyMuPDF>=1.26.0
+certifi>=2024.0.0  # SSL certificates for update checker
 
 # Build dependencies (optional)
 py2app>=0.28.0
